--- a/Group_Project-master/index.html
+++ b/Group_Project-master/index.html
@@ -13,8 +13,8 @@
                 <div class="menu">
                     <a href="#">Home</a>
                     <a href="#">About Us</a>
-                    <a href="#">Sign Up/Services</a>
-                    <a href="#">Login Page/Clients</a>
+                    <a href="#">Sign Up</a>
+                    <a href="#">Login</a>
                     <a href="#">Contact Us</a>
                 </div>
             </nav>
@@ -33,8 +33,17 @@
                 <button class="btn">Join Us</button>
             </div>
         </div>    
-
-       
+    
+       <div>
+           <h1>FDCB Highlights</h1>
+           <h2>ABCD</h2>
+           <h2>XYZZ</h2>
+           <h2>XYZZ</h2>
+           <h2>XYZZ</h2>
+           <h2>XYZZ</h2>
+           <h2>XYZZ</h2>
+           <h2>XYZZ</h2>
+       </div>
     </body>
     <footer>
         <h1><span id="logo_span">FG</span>BP</h1>
