login, aboutus, css

--- a/Group_Project-master/index.html
+++ b/Group_Project-master/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fitness and GYM Website-Group Project</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/png" href="./images/barbell.png" />
     </head>
     
         <header>
